# inthisone-dashboard

./: .gitignore  InthisoneDashboard.spec  README.md  build_macos.sh  desktop-dashboard.spec  index.html  main.py  pyinstaller_build.py  requirements.txt  setup.py
app/: data_ingest.py  db.py  main_window.py  plugin_manager.py  theme_manager.py
cpp_example/: CMakeLists.txt  build.py  libstats.cpp  stats_wrapper.py
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
modules/calculator/: __init__.py  scientific_widget.py  widget.py
modules/clock/: __init__.py  widget.py
modules/code_viewer/: __init__.py  widget.py
modules/custom_list/: widget.py
modules/markdown_viewer/: __init__.py  widget.py
modules/rest_api_table/: __init__.py  widget.py
modules/stats/: __init__.py  widget.py
modules/stock_market/: widget.py
modules/tree_list/: __init__.py  widget.py
modules/weather_forecast/: widget.py
modules/web_view/: widget.py
modules/wysiwyg_editor/: widget.py
